Removed unused asset folder and fixed header's margins

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
 }
-.navbar {
+.container-xxl {
     background-color: #1b1918;
     border-radius: 0;
     border: 0;
